--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -9,10 +9,7 @@ html,
 body {
     margin: 0;
     background-color: white;
-    background-image: url('../images/background.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    font-family: 'Gotham-Book';
+    font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
     -webkit-font-smoothing: antialiased;
 }
 
@@ -25,14 +22,11 @@ a {
 }
 
 a:hover {
-    color: #000;
+    font-weight: bold;
 }
 
-object {
-    top:0;
-    left:0;
-    width:100%;
-    max-height:100%;
+p {
+    margin: 10px
 }
 
 .landing-container {
@@ -40,37 +34,39 @@ object {
     min-height: 100%;
 }
 
-.logo > object {
-    width: 450px;
+.logo > img {
+    width: 479px;
+    height: auto;
 }
 
 .content-text {
-    margin-top: 50px;
-    font-size: 25px;
+    margin-top: 70px;
+    font-size: 22px;
 }
 
 .content {
     text-align: center;
     position: absolute;
     width: 100%;
-    margin-top: -100px;
+    margin-top: -333px;
     top: 50%;
 }
 
 @media (max-width: 640px) {
     .logo  {
-        padding: 25px;
+        padding: 20px;
     }
-    .logo > object {
+    .logo > img {
         width: 100%;
     }
     .content {
-        top: 45%;
+        top: 0;
+        margin-top: 0px;
     }
     .content-text {
         padding-left: 10px;
         padding-right: 10px;
-        margin-top: 25px;
-        font-size: 21px;
+        margin-top: 20px;
+        font-size: 20px;
     }
 }
